--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    Home About Contact Blog Careers Request Invite Next generation digital
+    <header class="header">
+      <nav class="nav">
+        <img src="images/logo.svg" alt="logo" class="logo" />
+        <ul class="nav__links">
+          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
+        </ul>
+        <button class="btn nav__btn">Request Invite</button>
+      </nav>
+    </header>
+    <!--       Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
     Request Invite Why choose Easybank? We leverage Open Banking to turn your
@@ -41,6 +55,6 @@
     Robinson Our invite-only Beta accounts are now live! After a lot of hard
     work by the whole team, we’re excited to launch our closed beta. It’s easy
     to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
   </body>
 </html>
