--- a/index.html
+++ b/index.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<!-- displays site properly based on user's device -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
 
-    <title>Frontend Mentor | Easybank landing page</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <nav class="nav">
-        <img src="images/logo.svg" alt="logo" class="logo" />
-        <ul class="nav__links">
-          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
-        </ul>
-        <button class="btn nav__btn">Request Invite</button>
-      </nav>
-    </header>
-    <!--       Next generation digital
-    banking Take your financial life online. Your Easybank account will be a
-    one-stop-shop for spending, saving, budgeting, investing, and much more.
-    Request Invite Why choose Easybank? We leverage Open Banking to turn your
+		<title>Frontend Mentor | Easybank landing page</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<header class="header">
+			<nav class="nav">
+				<img src="images/logo.svg" alt="logo" class="logo" />
+				<ul class="nav__links">
+					<li class="nav__item">
+						<a href="#" class="nav__link">Home</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">About</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Contact</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Blog</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Careers</a>
+					</li>
+				</ul>
+				<button class="btn nav__btn">Request Invite</button>
+			</nav>
+			<div class="header__box">
+				<div class="header__title">
+					<h1 class="heading-primary">
+						Next generation digital banking
+					</h1>
+					<p class="paragraph">
+						Take your financial life online. Your Easybank
+						account will be a one-stop-shop for spending,
+						saving, budgeting, investing, and much more.
+					</p>
+					<button class="btn">Request Invite</button>
+				</div>
+				<div class="header__img-box">
+					<img
+						src="images/bg-intro-desktop.svg"
+						class="header__img--below"
+						alt=""
+					/>
+					<img
+						src="images/image-mockups.png"
+						class="header__img--upper"
+						alt=""
+					/>
+				</div>
+			</div>
+		</header>
+		<!--        
+     Why choose Easybank? We leverage Open Banking to turn your
     bank account into your financial hub. Control your finances like never
     before. Online Banking Our modern web and mobile applications allow you to
     keep track of your finances wherever you are in the world. Simple Budgeting
@@ -56,5 +92,5 @@
     work by the whole team, we’re excited to launch our closed beta. It’s easy
     to request an invite through the site ... About Us Contact Blog Careers
     Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
-  </body>
+	</body>
 </html>
