--- a/index.html
+++ b/index.html
@@ -70,16 +70,83 @@
 				</div>
 			</div>
 		</header>
+		<main>
+			<section class="features">
+				<div class="features__title">
+					<h2 class="heading-secondary">
+						Why choose Easybank?
+					</h2>
+					<p class="paragraph">
+						We leverage Open Banking to turn your bank
+						account into your financial hub. Control your
+						finances like never before.
+					</p>
+				</div>
+				<div class="features__boxes">
+					<div class="features__box">
+						<img
+							src="images/icon-online.svg"
+							alt=""
+							class="features__logo"
+						/>
+						<h3 class="heading-tertiary">
+							Online Banking
+						</h3>
+						<p class="paragraph paragraph__sub">
+							Our modern web and mobile applications
+							allow you to keep track of your finances
+							wherever you are in the world.
+						</p>
+					</div>
+					<div class="features__box">
+						<img
+							src="images/icon-budgeting.svg"
+							alt=""
+							class="features__logo"
+						/>
+						<h3 class="heading-tertiary">
+							Simple Budgeting
+						</h3>
+						<p class="paragraph paragraph__sub">
+							See exactly where your money goes each
+							month. Receive notifications when you’re
+							close to hitting your limits.
+						</p>
+					</div>
+					<div class="features__box">
+						<img
+							src="images/icon-onboarding.svg"
+							alt=""
+							class="features__logo"
+						/>
+						<h3 class="heading-tertiary">
+							Fast Onboarding
+						</h3>
+						<p class="paragraph paragraph__sub">
+							We don’t do branches. Open your account in
+							minutes online and start taking control of
+							your finances right away.
+						</p>
+					</div>
+					<div class="features__box">
+						<img
+							src="images/icon-api.svg"
+							alt=""
+							class="features__logo"
+						/>
+						<h3 class="heading-tertiary">Open API</h3>
+						<p class="paragraph paragraph__sub">
+							Manage your savings, investments, pension,
+							and much more from one account. Tracking
+							your money has never been easier.
+						</p>
+					</div>
+				</div>
+			</section>
+		</main>
 		<!--        
-     Why choose Easybank? We leverage Open Banking to turn your
-    bank account into your financial hub. Control your finances like never
-    before. Online Banking Our modern web and mobile applications allow you to
-    keep track of your finances wherever you are in the world. Simple Budgeting
-    See exactly where your money goes each month. Receive notifications when
-    you’re close to hitting your limits. Fast Onboarding We don’t do branches.
-    Open your account in minutes online and start taking control of your
-    finances right away. Open API Manage your savings, investments, pension, and
-    much more from one account. Tracking your money has never been easier.
+         
+        
     Latest Articles By Claire Robinson Receive money in any currency with no
     fees The world is getting smaller and we’re becoming more mobile. So why
     should you be forced to only receive money in a single … By Wilson Hutton
