--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
+		<script defer src="js/script.js"></script>
 	</head>
 	<body>
 		<header class="header">
 			<nav class="nav">
 				<img src="images/logo.svg" alt="logo" class="logo" />
-				<ul class="nav__links">
+				<ul class="nav__links" id="nav__links">
 					<li class="nav__item">
 						<a href="#" class="nav__link">Home</a>
 					</li>
@@ -40,6 +41,9 @@
 					</li>
 				</ul>
 				<button class="btn nav__btn">Request Invite</button>
+				<button class="nav__menu">
+					<img src="images/icon-hamburger.svg" alt="" />
+				</button>
 			</nav>
 			<div class="header__box">
 				<div class="header__title">
@@ -54,16 +58,20 @@
 					<button class="btn">Request Invite</button>
 				</div>
 				<div class="header__img-box">
-					<img
-						src="images/bg-intro-desktop.svg"
-						class="header__img--below"
-						alt=""
-					/>
-					<img
-						src="images/image-mockups.png"
-						class="header__img--upper"
-						alt=""
-					/>
+					<div class="header__img-box--below">
+						<img
+							src="images/bg-intro-desktop.svg"
+							class="header__img--below"
+							alt=""
+						/>
+					</div>
+					<div class="header__img-box--upper">
+						<img
+							src="images/image-mockups.png"
+							class="header__img--upper"
+							alt=""
+						/>
+					</div>
 				</div>
 			</div>
 		</header>
@@ -212,7 +220,11 @@
 		</main>
 		<footer class="footer">
 			<div class="social-media">
-				<img src="images/logo-footer.svg" alt="easy bank logo" />
+				<img
+					class="logo"
+					src="images/logo-footer.svg"
+					alt="easy bank logo"
+				/>
 				<div class="social-media__box">
 					<a href="#" class="social-media__link">
 						<img
